@@ -2,6 +2,10 @@
 
 	* src/SDCCopt.c:
 	  Optimize out CAST following ADDRESS_OF, part of RFE #937.
+	* src/SDCCglue.c,
+	  support/regression/tests/bug-3786.c,
+	  support/regression/tests/bug-3728.c:
+	  Fix bug #3786.
 
 2024-10-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
